# wgpu_physics_engine

./: Cargo.toml  README.md
shaders/: cube_textured_shader.wgsl
simulations/2_TexturedCube/: cube_textured_shader.wgsl
simulations/3_Globe/src/: globe.rs
simulations/4_instances_imgui/: Cargo.toml  compute_movement.wgsl  instances_shader.wgsl  wireframe_shader.wgsl
simulations/4_instances_imgui/src/: instance.rs  main.rs
simulations/5_cloth_simulation/: Cargo.toml  cloth_instances.wgsl  cloth_mesh.wgsl  compute_movement.wgsl  forces.wgsl  globe_shader.wgsl
simulations/5_cloth_simulation/src/: cloth.rs  main.rs  sphere_vertices.rs
src/: cube_app.rs  main.rs  render_cube_textured.rs
