# Cargo.toml -- main
[workspace]
members = [
    "simulations/1_Cube",
    "simulations/2_TexturedCube",
    "simulations/3_Globe",
    "simulations/4_instances_imgui",
    "simulations/5_cloth_simulation",
]


[workspace.dependencies]
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
eframe = { version = "0.29", features = ["wgpu"] }
wgpu-bootstrap = { git = "https://github.com/Muten-Roshi-Sama/wgpu-bootstrap", tag = "v0.4.2" }
image = "0.24"