[package]
name = "cloth"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
eframe = { version = "0.29", features = ["wgpu"] }
wgpu-bootstrap = { git = "https://github.com/Muten-Roshi-Sama/wgpu-bootstrap", tag = "v0.4.2" }
image = "0.24"
rand = "0.9.2"
